--- a/app/src/main/res/drawable-anydpi/locked.xml
+++ b/app/src/main/res/drawable-anydpi/locked.xml
@@ -4,17 +4,6 @@
     android:viewportWidth="512"
     android:viewportHeight="512">
   <path
-      android:pathData="M336,208V113a80,80 0,0 0,-160 0v95"
-      android:strokeLineJoin="round"
-      android:strokeWidth="32"
-      android:fillColor="#00000000"
-      android:strokeColor="#000"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M144,208L368,208A48,48 0,0 1,416 256L416,432A48,48 0,0 1,368 480L144,480A48,48 0,0 1,96 432L96,256A48,48 0,0 1,144 208z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="32"
-      android:fillColor="#00000000"
-      android:strokeColor="#000"
-      android:strokeLineCap="round"/>
+      android:fillColor="#FF000000"
+      android:pathData="M368,192L352,192L352,112a96,96 0,1 0,-192 0v80L144,192a64.07,64.07 0,0 0,-64 64L80,432a64.07,64.07 0,0 0,64 64L368,496a64.07,64.07 0,0 0,64 -64L432,256A64.07,64.07 0,0 0,368 192ZM320,192L192,192L192,112a64,64 0,1 1,128 0Z"/>
 </vector>
