--- a/app/src/main/res/drawable/ic_logo_foreground.xml
+++ b/app/src/main/res/drawable/ic_logo_foreground.xml
@@ -1,21 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <group android:scaleX="0.38047057"
-      android:scaleY="0.38047057"
-      android:translateX="161.3051"
-      android:translateY="158.59953">
-    <path
-        android:pathData="m79.72,438.95c-6.17,-1.29 -12.6,-4.75 -17.55,-9.44 -5.52,-5.22 -8.37,-9.76 -10.58,-16.85C50.06,407.74 50,402.07 50,256.04 50,110.02 50.06,104.35 51.59,99.42 53.8,92.33 56.65,87.79 62.17,82.57c10.06,-9.52 23.69,-12.48 35.99,-7.81 3.75,1.42 249.48,148.09 256.85,153.31 2.09,1.48 5.42,5.09 7.39,8.01 4.9,7.26 6.41,12.87 5.97,22.1 -0.3,6.19 -0.79,8.27 -3.11,12.96 -1.51,3.08 -4.54,7.4 -6.72,9.61 -2.97,3 -22.23,14.93 -76.38,47.32 -71.47,42.74 -72.47,43.3 -76.92,43.3 -11.64,0 -19.17,-12 -14.1,-22.47 1.66,-3.43 4.47,-5.21 73.98,-46.79l72.25,-43.22 -0.26,-3.01 -0.26,-3.01 -124.2,-74.36C144.33,137.61 87.62,103.97 86.62,103.76c-1.12,-0.24 -2.5,0.3 -3.59,1.39l-1.77,1.77v149.12c0,148 0.01,149.14 1.69,150.81 0.93,0.93 2.29,1.69 3.03,1.69 0.74,0 16.61,-9.16 35.27,-20.36l33.92,-20.36 4.78,0.35c11.49,0.83 18.26,13.18 12.66,23.12 -1.74,3.09 -5.43,5.53 -36.72,24.26 -19.13,11.45 -36.43,21.4 -38.43,22.11 -4.72,1.66 -13.12,2.28 -17.75,1.31z"
-        android:strokeWidth="0.844898"
-        android:fillColor="#4fc17c"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="m426.95,445.65c-1.74,-0.92 -4.22,-3.25 -5.49,-5.18l-2.32,-3.51V256.03,75.1l2.32,-3.51c7.16,-10.82 23.22,-8.5 27.52,3.97 1.43,4.16 1.3,357.53 -0.14,361.49 -1.29,3.56 -5.28,7.75 -8.75,9.2 -3.87,1.62 -9.43,1.36 -13.15,-0.6z"
-        android:strokeWidth="0.844898"
-        android:fillColor="#4fc17c"
-        android:strokeColor="#00000000"/>
-  </group>
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <path
+      android:pathData="m41.4,70.36c-0.79,0 -1.47,-0.28 -2.03,-0.85 -0.56,-0.56 -0.85,-1.24 -0.85,-2.03l0,-0.23c0,-0.79 0.28,-1.47 0.85,-2.03 0.56,-0.56 1.24,-0.85 2.03,-0.85l0.34,0c0.79,0 1.47,0.28 2.03,0.85 0.56,0.56 0.85,1.24 0.85,2.03l0,0.23c0,0.79 -0.28,1.47 -0.85,2.03 -0.56,0.56 -1.24,0.85 -2.03,0.85z"
+      android:strokeWidth="3.13"
+      android:fillColor="#4fc17c"
+      android:strokeLineCap="square"/>
+  <path
+      android:pathData="m50.17,62.51 l1.44,-0.89 3.19,-1.91 3.19,-1.91 3.19,-1.91c1.25,-0.75 1.25,-2.71 0,-3.46L35.66,37.16C34.22,36.3 32.47,37.44 32.47,39.24l0,32.24"
+      android:strokeWidth="4.94"
+      android:fillColor="#00000000"
+      android:strokeColor="#4fc17c"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="m74.78,39.52q-1.19,0 -2.03,-0.85 -0.85,-0.85 -0.85,-2.03l0,-0.23q0,-1.19 0.85,-2.03 0.85,-0.85 2.03,-0.85l0.34,0q1.19,0 2.03,0.85 0.85,0.85 0.85,2.03l0,0.23q0,1.19 -0.85,2.03 -0.85,0.85 -2.03,0.85zM74.89,74.47q-1.07,0 -1.81,-0.73 -0.73,-0.73 -0.73,-1.81l0,-24.23q0,-1.13 0.73,-1.86 0.73,-0.73 1.81,-0.73 1.13,0 1.86,0.73 0.73,0.73 0.73,1.86l0,24.23q0,1.07 -0.73,1.81 -0.73,0.73 -1.86,0.73z"
+      android:strokeWidth="3.13"
+      android:fillColor="#4fc17c"
+      android:strokeLineCap="square"/>
 </vector>
